openapi: modify StorePropertyRequest, StorePropertyResponse, GetPropertyResponse to nest the property under the property key in json models
